# scripted-lab

./: CMakeLists.txt  EXEC_ADDON_README.md  README.md  build and run qt_view - ubuntu linux.md  c_makecocoaview.txt  c_makeqtview.txt  cocoa_view.mm  echo.c  echo.cpp  echo.java  echo.py  frontend_contract.hpp  presenter.hpp  programmingScience.txt  qt_view.cpp  scripted-gui.cpp  scripted.cpp  scripted_core.hpp  scripted_exec.hpp  setup-instructions.txt  win32_view.cpp
